--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
   <!-- footer -->
-  <footer class="p-3 bg-dark text-warning text-center fixed-bottom">
+  <footer class="pt-3 bg-dark text-warning text-center fixed-bottom">
     <p>&copy; 2020 Kyle Style</p>
   </footer>
 
