--- a/portfolio.html
+++ b/portfolio.html
@@ -58,36 +58,63 @@
     <div class="row md-5 pt-4 pb-4 text-body" style="text-align: center;">
       <div class="col">
         <div class="card">
-          <img src="images/homework-4.png" class="img-fluid card-img-top" height="325px" width="325px"
-            alt="pop quiz screen shot">
-          <a href="https://kallen478.github.io/04-web-APIs-homework/" target="_blank" class="btn btn-warning center"
-            role="button" aria-disabled="true"><b>90's Music Pop Quiz</b></a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="images/homework-5.png" class="img-fluid card-img-top" height="325px" width="325px"
-            alt="day planner screen shot">
-          <a href="https://kallen478.github.io/05-third-party-APIs-homework/" target="_blank"
-            class="btn btn-warning center" role="button" aria-disabled="true"><b>Work Day Planner</b></a>
-        </div>
-        <br>
-        <h4 class="text-warning">Click on project title to view</h4>
-      </div>
-      <div class="col">
-        <div class="card">
           <img src="images/what-am-i-having.png" class="img-fluid card-img-top" height="325px" width="325px"
             alt="what am i having screen shot">
           <a href="https://kallen478.github.io/what-am-i-having/" target="_blank" class="btn btn-warning center"
             role="button" aria-disabled="true"><b>What Am I Having</b></a>
         </div>
       </div>
+      <div class="col">
+        <div class="card">
+          <img src="images/binvoice.png" class="img-fluid card-img-top" height="325px" width="325px"
+            alt="binvoice screen shot">
+          <a href="https://evening-plains-51887.herokuapp.com/" target="_blank"
+            class="btn btn-warning center" role="button" aria-disabled="true"><b>Binvoice</b></a>
+        </div>
+        <br>
+        <h4 class="text-warning">Click on project title to view</h4>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="images/weather-dashboard.png" class="img-fluid card-img-top" height="325px" width="325px"
+            alt="weather dashboard screen shot">
+          <a href="https://kallen478.github.io/06-server-side-APIs-homework/" target="_blank" class="btn btn-warning center"
+            role="button" aria-disabled="true"><b>Weather Dashboard</b></a>
+        </div>
+      </div>
     </div>
+
+    <div class="row md-5 pt-4 pb-4 text-body" style="text-align: center;">
+      <div class="col">
+        <div class="card">
+          <img src="images/homework-5.png" class="img-fluid card-img-top" height="325px" width="325px"
+            alt="work day planner screen shot">
+          <a href="https://kallen478.github.io/05-third-party-APIs-homework/" target="_blank"
+            class="btn btn-warning center" role="button" aria-disabled="true"><b>Work Day Planner</b></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="images/03-javascript-homework-demo.png" class="img-fluid card-img-top" height="325px" width="325px"
+            alt="password generator screen shot">
+          <a href="https://kallen478.github.io/03-javascript-homework/" target="_blank" class="btn btn-warning center"
+            role="button" aria-disabled="true"><b>Password Generator</b></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="images/homework-4.png" class="img-fluid card-img-top" height="325px" width="325px"
+            alt="pop quiz screen shot">
+          <a href="https://kallen478.github.io/04-web-APIs-homework/" target="_blank" class="btn btn-warning center"
+            role="button" aria-disabled="true"><b>90's Music Pop Quiz</b></a>
+        </div>
+      </div>
     </div>
+
   </main>
 
   <!-- footer -->
-  <footer class="p-3 bg-dark text-warning text-center fixed-bottom">
+  <footer class="pt-3 bg-dark text-warning text-center fixed-bottom">
     <p>&copy; 2020 Kyle Style</p>
   </footer>
 
