updated my links

--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,8 @@
         <div class="col col-md-2">
           <a href="https://github.com/Kallen478" target="_blank" class="fa fa-github"></a>
           <a href="https://www.linkedin.com/in/kyle-allen-a7674917/" target="_blank" class="fa fa-linkedin"></a>
+          <a href="images/kyle-allen2.pdf" target="_blank" class="fa fa-file"></a>
+          <a href="mailto:kallen478@gmail.com" class="fa fa-envelope-o"></a>
           <a href="tel:+1-908-635-4087" class="fa fa-mobile"></a>
         </div>
       </section>
@@ -91,7 +93,7 @@
   </main>
 
   <!-- footer -->
-  <footer class="p-3 bg-dark text-warning text-center fixed-bottom">
+  <footer class="pt-3 bg-dark text-warning text-center fixed-bottom">
     <p>&copy; 2020 Kyle Style</p>
   </footer>
 
